# molteee

./: .env.example  .gitignore  CLAUDE.md  DEMO_PLAN.md  MAINNET_MIGRATION.md  POKERV2.md  README.md
.claude/: settings.local.json
agent/: .env.example  CLAUDE.md  package-lock.json  package.json  registration.json  tsconfig.json
contracts/: README.md  foundry.toml
docs/: CHALLENGE_FLOW.md  PROBLEM.md  PROJECT.md  SOLUTION.md  UI_PLAN.md  UX_PLAN.md  registration.json
extra_info/: moltbook-glossary.md  moltbook-info.md  moltiverse-hackathon.md  monad-dev-guide.md  monad-foundry-skill.md  nadfun-guide.md
frontend/: components.json  next.config.ts  package-lock.json  package.json
moltbook/: SKILL.md
moltx/: SKILL.md  heartbeat.md
openclaw/: USER.md
opponents/: base_bot.py  counter_bot.py  gambler_bot.py  mirror_bot.py  random_bot.py  rock_bot.py  run_all.py  simple_bot.py
scripts/: check-agent-count.ts  play_bot_match.py  test_prediction_market_e2e.py  test_tournament_v2_e2e.py
skills/fighter/: SKILL.md  pyproject.toml
skills/fighter/data/: moltbook_log.json  moltbook_state.json  moltx_log.json  moltx_state.json  psychology_config.json
skills/fighter/lib/: bankroll.py  contracts.py  moltbook.py  moltx.py  opponent_model.py  output.py  strategy.py
skills/fighter/references/: rps-strategy.md
skills/fighter/scripts/: arena.py  demo.py  psychology.py
task/: 00-OVERVIEW.md  01-FOUNDATION.md  02-BASIC-AGENT.md  03-OPPONENTS-AND-STRATEGY.md  03-OPPONENTS.md  04-POKER.md  04-STRATEGY-ENGINE.md  05-AUCTION-AND-CROSS-GAME.md  05-DEMO-POLISH.md  (+7 more)
(+173 files in other folders)
